# cds-cpp-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gtest_readme.md  main.cpp
.github/workflows/: cmake.yml
include/: OpenFIle.hpp  libHead.h
res/: json.md  test.json  test_3.json
src/: OpenFIle.cpp  Test.cpp
